Corrección de errores e implementación de checkhash en sincronizador.

--- a/src/app/comun/dialogos/dialogos.component.sass
+++ b/src/app/comun/dialogos/dialogos.component.sass
@@ -27,6 +27,10 @@
     color: black
     background-color: $colorFondo2
 
+    .wrapper
+      position: relative
+      padding: 10px
+
     frameComponent
         position: absolute
         top: 0
@@ -38,6 +42,7 @@
         margin-top: 20px
         width: 100%
         text-align: center
+        font-weight: bold
         @include media("<=phone")
           margin-top: 10px
 
