--- a/src/app/comun/interfaz/interfaz.component.sass
+++ b/src/app/comun/interfaz/interfaz.component.sass
@@ -947,16 +947,16 @@
   -webkit-transform: rotateY(-180deg)
 
 #coin.noCritico
-  -webkit-animation: flipTails 3s ease-out forwards
-  -moz-animation: flipTails 3s ease-out forwards
-  -o-animation: flipTails 3s ease-out forwards
-  animation: flipTails 3s ease-out forwards
+  -webkit-animation: flipTails 2s ease-out 1s forwards
+  -moz-animation: flipTails 2s ease-out 1s forwards
+  -o-animation: flipTails 2s ease-out 1s forwards
+  animation: flipTails 2s ease-out 1s forwards
 
 #coin.critico
-  -webkit-animation: flipHeads 3s ease-out forwards
-  -moz-animation: flipHeads 3s ease-out forwards
-  -o-animation: flipHeads 3s ease-out forwards
-  animation: flipHeads 3s ease-out forwards
+  -webkit-animation: flipHeads 2s ease-out 1s forwards
+  -moz-animation: flipHeads 2s ease-out 1s forwards
+  -o-animation: flipHeads 2s ease-out 1s forwards
+  animation: flipHeads 2s ease-out 1s forwards
 
 @keyframes flipHeads
   from
