--- a/src/app/comun/mapa-mazmorra/mapa-mazmorra.component.sass
+++ b/src/app/comun/mapa-mazmorra/mapa-mazmorra.component.sass
@@ -7,7 +7,6 @@
   width: 100%
   height: 100%
   mix-blend-mode: multiply
-  border: green 3px solid
 
 #contenedorMapaMazmorra
   .contenedorIsometrico
@@ -15,13 +14,13 @@
     mix-blend-mode: multiply
     top: 0px
     left: 0px
-    width: 3496px
-    height: 2480px
+    width: fit-content
+    height: fit-content
+    padding: 50vh 50vw
     //width: 1000px
     //height: 1000px
     max-height: none !important
     max-width: none !important
-    border: blue 3px solid
     //transform: translate(-50%,-50%) scale(0.7)
     &::-webkit-scrollbar
         display: none
@@ -34,14 +33,11 @@
         top: 45%
 
     .canvasIsometrico
-        position: absolute
+        position: relative
         width: 3496px
         height: 2480px
-        //width: 1000px
-        //height: 1000px
         mix-blend-mode: multiply
         z-index: 5
-        transform: scale(0.8)
         border: red 3px solid
 
         .elementoIsomentrico
