--- a/src/app/comun/mazmorra/mazmorra.component.html
+++ b/src/app/comun/mazmorra/mazmorra.component.html
@@ -142,14 +142,16 @@
 	<!--      Panel Control    -->
 	<!--   ******************* -->
 
+    <ng-container *ngIf="this.mazmorraService.mostrarMazmorra">
     <panelControlComponent (comandoPanelControl)="comandoPanelControl($event)" id="panelControl"
             [tipo]="'mazmorra'"
-            [vida]="mazmorraService.sesion.render.heroes[mazmorraService.personaje.heroeIndex].vida"
-            [energia]="mazmorraService.sesion.render.heroes[mazmorraService.personaje.heroeIndex].energia"
-            [energiaFutura]="mazmorraService.sesion.render.heroes[mazmorraService.personaje.heroeIndex].energiaFutura"
-            [turno]= "mazmorraService.esTurnoPropio"
-            [habilitar]="mazmorraService.esTurnoPropio || mazmorraService.permitirMultiControl" >
+            [vida]="mazmorraService.sesion.render.heroes[mazmorraService.estadoControl.heroePropioIndex].vida"
+            [energia]="mazmorraService.sesion.render.heroes[mazmorraService.estadoControl.heroePropioIndex].energia"
+            [energiaFutura]="mazmorraService.sesion.render.heroes[mazmorraService.estadoControl.heroePropioIndex].energiaFutura"
+            [turno]= "mazmorraService.estadoControl.esTurnoPropio"
+            [habilitar]="mazmorraService.estadoControl.esTurnoPropio || mazmorraService.permitirMultiControl" >
     </panelControlComponent>
+    </ng-container>
 
 		<!--   ******************* -->
 		<!--        Experiencia    -->
@@ -174,7 +176,7 @@
 	<div id="contenedorHeroes">
 
         <ng-container *ngIf="this.mazmorraService.mostrarMazmorra">
-		<heroeComponent *ngFor="let heroe of this.mazmorraService.sesion.render.heroes; let i = index" [desplegable]="false" [renderMazmorra]="this.mazmorraService.sesion.render" [renderHeroe]="heroe" [seleccionable]="this.mazmorraService.seleccionarHeroes"  class="panelHeroe animate__animated animate__infinite" (click)="mazmorraService.seleccionarHeroe(i);"></heroeComponent>
+		      <heroeComponent *ngFor="let heroe of this.mazmorraService.sesion.render.heroes; let i = index" [desplegable]="false" [indexHeroe]="i" [estadoControl]="this.mazmorraService.estadoControl" [renderHeroe]="heroe" [seleccionable]="this.mazmorraService.seleccionarHeroes"  class="panelHeroe animate__animated animate__infinite" (click)="mazmorraService.seleccionarHeroe(i);"></heroeComponent>
         </ng-container>
 
 	</div>
@@ -185,7 +187,7 @@
 
 	<div id="contenedorEnemigos">
         <ng-container *ngIf="this.mazmorraService.mostrarMazmorra">
-            <enemigoComponent *ngFor="let enemigo of this.mazmorraService.sesion.render.enemigos; let i = index" [desplegable]="false" [indexEnemigo]="i" [renderMazmorra]="this.mazmorraService.sesion.render" [renderEnemigo]="enemigo" [seleccionable]="this.mazmorraService.seleccionarEnemigos" (click)="mazmorraService.seleccionEnemigo(i)" class="panelEnemigo"></enemigoComponent>
+          <enemigoComponent *ngFor="let enemigo of this.mazmorraService.sesion.render.enemigos; let i = index" [desplegable]="false" [indexEnemigo]="i" [estadoControl]="this.mazmorraService.estadoControl" [renderEnemigo]="enemigo" [seleccionable]="this.mazmorraService.seleccionarEnemigos" (click)="mazmorraService.seleccionEnemigo(i)" class="panelEnemigo"></enemigoComponent>
         </ng-container>
 	</div>
 
@@ -193,11 +195,14 @@
             MAPA MAZMORRA
      ************************************************* -->
 
-	<mapaMazmorraComponent id="mapaMazmorra"
+  <ng-container *ngIf="this.mazmorraService.mostrarMazmorra">
+	<mapaMazmorraComponent #mapaMazmorra id="mapaMazmorra"
+      (eventoClickElemento)="clickElemento($event)"
       [isometrico]="this.mazmorraService.mazmorra.isometrico"
       [escalaIsometrico]="0.3"
       [salasDescubiertas]="this.mazmorraService.sesion.render.mazmorra.salasDescubiertas">
   </mapaMazmorraComponent>
+  </ng-container>
 
 </div>
 
