--- a/src/app/comun/desarrollador/formBuffComponent/formBuff.component.html
+++ b/src/app/comun/desarrollador/formBuffComponent/formBuff.component.html
@@ -34,7 +34,7 @@
 
 				  <mat-form-field appearance="legacy" class="formDescripcion">
 					<mat-label>Descripción</mat-label>
-					<input matInput placeholder="Descripción" formControlName="descripcion">
+                    <textarea matInput placeholder="Descripción" formControlName="descripcion"></textarea>
 				  </mat-form-field>
 
                     <div class="selector formObjetivo">
