--- a/src/app/comun/desarrollador/formBuffComponent/formBuff.component.sass
+++ b/src/app/comun/desarrollador/formBuffComponent/formBuff.component.sass
@@ -119,6 +119,10 @@
         left: 30%
         top: 20%
         width: 60%
+        z-index: 100
+        color: white
+        textarea
+          background: #242424
       .formDistancia
         left: 5%
         top: 35%
