--- a/src/app/comun/desarrollador/formHechizosComponent/formHechizos.component.sass
+++ b/src/app/comun/desarrollador/formHechizosComponent/formHechizos.component.sass
@@ -120,6 +120,10 @@
         left: 30%
         top: 20%
         width: 60%
+        z-index: 100
+        color: white
+        textarea
+          background: #242424
       .formDistancia
         left: 5%
         top: 35%
@@ -291,12 +295,11 @@
         top: 62.5%
         left: 50%
         height: 15%
-        width: 0
+        width: 48%
         background-color: grey
 
         .contenedorImagenEncadenado
             position: relative
-            width: 0
             .flecha
                 filter: invert(1)
                 transform: rotate(180deg)
