--- a/src/app/comun/interfaz/interfaz.component.sass
+++ b/src/app/comun/interfaz/interfaz.component.sass
@@ -106,14 +106,6 @@
                       font-size: 40px
                       background-color: rgba(0,0,0,0.7)
 
-                .hechizo:hover
-                    color: black
-                    background-color: rgba(255,255,255,0.6)
-                    .opcionesGenerales
-                        position: relative
-                        width: 100%
-                        height: 100%
-
             .contenedorAtributo
                 position: relative
                 display: flex
@@ -186,13 +178,19 @@
                         position: relative
                         width: 100%
                         height: 100%
-            .contenedorDetalleHechizo
+
+            #detalleHechizoComponentContainer
               position: absolute
               top: 5vh
               width: 100%
               height: 90%
-              border: $colorTexto solid 1px
-
+              .innerShadow
+                position: absolute
+                box-shadow: inset 0px 0px 10px 10px rgba(0,0,0,0.75)
+                top: 0
+                width: 100%
+                height: 100%
+                pointer-events: none
 
         .contenedorBotones
             position: absolute
